[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Assets/START GAME/7CC6CF50-589B-42E8-8D2A-22DC5F2AA8EF.png" type="Texture" id=1]
[ext_resource path="res://src/Assets/START GAME/QUIT/E4FACAE8-E901-4327-9F44-D5A2BD92907A.png" type="Texture" id=2]
[ext_resource path="res://src/Assets/START GAME/QUIT/6BB1AB47-389B-4D41-AA73-50966281B3B0.png" type="Texture" id=3]
[ext_resource path="res://src/Assets/START GAME/29304311-71DF-41A6-B753-8035905AEE94.png" type="Texture" id=4]
[ext_resource path="res://src/Assets/START GAME/START/8FAAA932-E0E2-4EA3-893E-1884F13B0F07.png" type="Texture" id=5]
[ext_resource path="res://src/Assets/START GAME/START/AB09CC7C-C835-4A65-A9D0-5A84DC250537.png" type="Texture" id=6]
[ext_resource path="res://src/Assets/START GAME/AB09CC7C-C835-4A65-A9D0-5A84DC250537.png" type="Texture" id=7]
[ext_resource path="res://src/Scenes/Main/Start.gd" type="Script" id=8]

[sub_resource type="Theme" id=1]

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Start" type="Node2D"]
script = ExtResource( 8 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 4 )
expand = true

[node name="Logo" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true

[node name="Logo2" type="TextureRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 7 )
expand = true

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 348.0
margin_top = 491.0
margin_right = 641.0
margin_bottom = 590.0
icon = ExtResource( 2 )

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 347.0
margin_top = 388.0
margin_right = 638.0
margin_bottom = 486.0
theme = SubResource( 1 )
icon = ExtResource( 5 )

[node name="StartBtn" type="TextureButton" parent="."]
margin_left = 428.0
margin_top = 420.0
margin_right = 599.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( -3, 0 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="QuitBtn" type="TextureButton" parent="."]
margin_left = 430.0
margin_top = 483.0
margin_right = 598.0
margin_bottom = 542.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 2 )

[connection signal="button_up" from="StartBtn" to="." method="_on_StartBtn_button_up"]
[connection signal="button_up" from="QuitBtn" to="." method="_on_QuitBtn_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
